align-self to center to avoid stretching

--- a/src/pages/ArticleCard.scss
+++ b/src/pages/ArticleCard.scss
@@ -9,6 +9,7 @@
 
 .article-card .preview {
   display: flex;
+  align-items: flex-start;
   @media screen and (width < 768px) {
     flex-direction: column;
   }
